fix: #38920891 - pressed buttons wrong color

--- a/src/components/layout/rightbar/rightbar.module.scss
+++ b/src/components/layout/rightbar/rightbar.module.scss
@@ -7,20 +7,6 @@
     align-items: center;
     margin-bottom: 36px;
     width: 191px;
-
-    // может перенести эти стили в src/components/ui/Button/Button.module.scss ?
-    button {
-      background: #45624e;
-      border-radius: 18px;
-      border: none;
-      color: #fff;
-      padding: 16px 24px;
-      font-weight: 400;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 8px;
-    }
   }
 
   .sort {
@@ -37,17 +23,6 @@
       flex-wrap: wrap;
       row-gap: 16px;
       column-gap: 12px;
-
-      // может перенести и в src/components/ui/Button/Button.module.scss ?
-      button {
-        padding: 8px 16px;
-        border: 2px solid #000;
-        border-radius: 14px;
-
-        &.active {
-          border-color: var(--primary-color-light);
-        }
-      }
     }
   }
 
